# fullDataExtractionForBTC

./: .codex.local  .gitignore  README.en.md  README.md  pyproject.toml  run.py
data/okx/BTC-USDT-SWAP/metadata/day_indexes/: candles__bar=1m__tz=UTC.json  funding_rates__bar=1m__tz=UTC.json  index_candles__bar=1m__tz=UTC.json  mark_price_candles__bar=1m__tz=UTC.json
data/okx/BTC-USDT-SWAP/metadata/manifests/: candles.json  funding_rates.json  index_candles.json  mark_price_candles.json
data/okx/BTC-USDT-SWAP/metadata/month_indexes/: candles__bar=1m__tz=UTC.json  funding_rates__bar=1m__tz=UTC.json  (+2 more)
docs/superpowers/plans/: 2026-04-20-okx-btc-swap.md
docs/superpowers/specs/: 2026-04-20-okx-btc-swap-design.md
okx1/BTC-USDT-SWAP/metadata/: instrument.json
okx1/BTC-USDT-SWAP/metadata/day_indexes/: index_candles__bar=1m__tz=UTC.json  mark_price_candles__bar=1m__tz=UTC.json
okx1/BTC-USDT-SWAP/metadata/manifests/: index_candles.json  mark_price_candles.json
okx1/BTC-USDT-SWAP/metadata/month_indexes/: candles__bar=1m__tz=UTC.json
scripts/: package_data_release.sh
src/full_data_extraction_for_btc/: __init__.py  __main__.py  cli.py  client.py  downloader.py  main.py  normalize.py  query.py  service.py  storage.py  terminal_logging.py  timeutils.py  webapp.py
src/full_data_extraction_for_btc/services/: __init__.py  continuity_index.py  event_logging.py  models.py  time_windows.py
src/full_data_extraction_for_btc/static/: workbench.html
tests/: test_cli.py  test_downloader.py  test_imports.py  test_normalize.py  test_query.py  test_service.py  test_storage.py
(+6 files in other folders)
