[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "full-data-extraction-for-btc"
version = "0.1.0"
description = "Download OKX BTC perpetual historical datasets for backtesting."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[tool.setuptools.packages.find]
where = ["src"]
